cabal-version:      3.4
name:               parser
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Shin Umeda
maintainer:         umeda.shin@gmail.com
category:           Math
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable parser
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1, containers
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules: Tokenizer